<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.demoservice.PrimeNumberActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="@integer/prinumact_results_weight" >

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            android:hint="@string/hint_prime_numbers" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="@integer/prinumact_input_weight"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/from"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="@string/hint_from"
            android:inputType="number"
            android:padding="8dp"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/to"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="@string/hint_to"
            android:inputType="number"
            android:padding="8dp"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/count"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="@string/hint_count"
            android:inputType="number"
            android:padding="8dp"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="@integer/prinumact_btngo_weight"
        android:onClick="onClick"
        android:textSize="@dimen/text_size"
        android:text="@string/action_button_text" />

</LinearLayout>